# visoptslider

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.PyPI.md  README.md  setup.py
include/visoptslider/: visoptslider.hpp
python_tests/: simple_test.py
src/: visoptslider.cpp
tests/: simple_test.cpp
visoptslider/: __init__.py  visoptslider.py
